add custom pyfunc docs
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/basic-pyfunc.ipynb
+++ b/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/basic-pyfunc.ipynb
@@ -98,14 +98,14 @@
     "from mlflow.models import infer_signature\n",
     "import mlflow.pyfunc\n",
     "\n",
-    "class Lissajous(mlflow.pyfunc.PythonModel):\n",
     "\n",
+    "class Lissajous(mlflow.pyfunc.PythonModel):\n",
     "    def __init__(self, A=1, B=1, num_points=1000):\n",
     "        self.A = A\n",
     "        self.B = B\n",
     "        self.num_points = num_points\n",
-    "        self.t_range = (0, 2*np.pi)\n",
-    "    \n",
+    "        self.t_range = (0, 2 * np.pi)\n",
+    "\n",
     "    def generate_lissajous(self, a, b, delta):\n",
     "        t = np.linspace(self.t_range[0], self.t_range[1], self.num_points)\n",
     "        x = self.A * np.sin(a * t + delta)\n",
@@ -115,18 +115,18 @@
     "    def predict(self, context, model_input, params=None):\n",
     "        \"\"\"\n",
     "        Generate and plot the Lissajous curve with annotations for parameters.\n",
-    "        \n",
+    "\n",
     "        Args:\n",
     "        - model_input (pd.DataFrame): DataFrame containing columns 'a' and 'b'.\n",
     "        - params (dict, optional): Dictionary containing optional parameter 'delta'.\n",
     "        \"\"\"\n",
     "        # Extract a and b values from the input DataFrame\n",
-    "        a = model_input['a'].iloc[0]\n",
-    "        b = model_input['b'].iloc[0]\n",
+    "        a = model_input[\"a\"].iloc[0]\n",
+    "        b = model_input[\"b\"].iloc[0]\n",
     "\n",
     "        # Extract delta from params or set it to 0 if not provided\n",
-    "        delta = params.get('delta', 0) \n",
-    "        \n",
+    "        delta = params.get(\"delta\", 0)\n",
+    "\n",
     "        # Generate the Lissajous curve data\n",
     "        df = self.generate_lissajous(a, b, delta)\n",
     "\n",
@@ -134,7 +134,7 @@
     "\n",
     "        # Create the plot components\n",
     "        fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "        ax.plot(df['x'], df['y'])\n",
+    "        ax.plot(df[\"x\"], df[\"y\"])\n",
     "        ax.set_title(\"Lissajous Curve\")\n",
     "\n",
     "        # Define the annotation string\n",
@@ -145,17 +145,22 @@
     "        b = {b}\n",
     "        delta = {np.round(delta, 2)} rad\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        # Add the annotation with a bounding box outside the plot area\n",
-    "        ax.annotate(annotation_text, xy=(1.05, 0.5), xycoords=\"axes fraction\", fontsize=12,\n",
-    "                    bbox=dict(boxstyle=\"round,pad=0.25\", facecolor=\"aliceblue\", edgecolor=\"black\"))\n",
+    "        ax.annotate(\n",
+    "            annotation_text,\n",
+    "            xy=(1.05, 0.5),\n",
+    "            xycoords=\"axes fraction\",\n",
+    "            fontsize=12,\n",
+    "            bbox=dict(boxstyle=\"round,pad=0.25\", facecolor=\"aliceblue\", edgecolor=\"black\"),\n",
+    "        )\n",
     "\n",
     "        # Adjust plot borders to make space for the annotation\n",
     "        plt.subplots_adjust(right=0.65)\n",
     "        plt.close()\n",
-    "        \n",
+    "\n",
     "        # Return the plot\n",
-    "        return fig\n"
+    "        return fig"
    ]
   },
   {
@@ -186,7 +191,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Define the path to save the model\n",
     "model_path = \"lissajous_model\"\n",
     "\n",
@@ -194,7 +198,7 @@
     "model_10k_standard = Lissajous(1, 1, 10_000)\n",
     "\n",
     "# Infer the model signature, ensuring that we define the params that will be available for customization at inference time\n",
-    "signature = infer_signature(pd.DataFrame([{\"a\": 1, \"b\": 2}]), params={\"delta\": np.pi/5})\n",
+    "signature = infer_signature(pd.DataFrame([{\"a\": 1, \"b\": 2}]), params={\"delta\": np.pi / 5})\n",
     "\n",
     "# Save our custom model to the path we defined, with the signature that we declared\n",
     "mlflow.pyfunc.save_model(path=model_path, python_model=model_10k_standard, signature=signature)"
@@ -244,10 +248,10 @@
    ],
    "source": [
     "# Define the input DataFrame. In our custom model, we're reading only the first row of data to generate a plot.\n",
-    "model_input = pd.DataFrame({'a': [3], 'b': [2]})\n",
+    "model_input = pd.DataFrame({\"a\": [3], \"b\": [2]})\n",
     "\n",
     "# Define a params override for the `delta` parameter\n",
-    "params = {'delta': np.pi/3}\n",
+    "params = {\"delta\": np.pi / 3}\n",
     "\n",
     "# Run predict, which will call our internal method `generate_lissajous` before generating a `matplotlib` plot showing the curve\n",
     "fig = loaded_pyfunc_model.predict(model_input, params)\n",
@@ -275,7 +279,9 @@
    ],
    "source": [
     "# Try a different configuration of arguments\n",
-    "fig2 = loaded_pyfunc_model.predict(pd.DataFrame({'a': [15], 'b': [17]}), params={\"delta\": np.pi/5})\n",
+    "fig2 = loaded_pyfunc_model.predict(\n",
+    "    pd.DataFrame({\"a\": [15], \"b\": [17]}), params={\"delta\": np.pi / 5}\n",
+    ")\n",
     "\n",
     "fig2"
    ]
