--- a/docs/source/llms/custom-pyfunc-for-llms/notebooks/custom-pyfunc-advanced-llm.ipynb
+++ b/docs/source/llms/custom-pyfunc-for-llms/notebooks/custom-pyfunc-advanced-llm.ipynb
@@ -12,8 +12,11 @@
     "In this tutorial, we'll explore how to save custom cutting-edge Large Language Models (LLMs) using MLflow. Specifically, we'll delve into the intricacies of a situation where the default MLflow 'transformers' flavor does not provide direct support for our model type and its dependencies. This necessitates the creation of a custom `pyfunc` to ensure seamless model deployment. \n",
     "\n",
     "Through this tutorial, we aim to provide you with:\n",
+    "\n",
     "- An understanding of why certain models might need custom `pyfunc` definitions.\n",
+    "\n",
     "- A walk-through of creating a custom `pyfunc` to handle model dependencies and interface data.\n",
+    "\n",
     "- Insight into how a custom `pyfunc` can offer a simplified interface to end-users in a deployed environment.\n"
    ]
   },
@@ -35,8 +38,11 @@
     "#### The Power of Custom PyFunc\n",
     "\n",
     "The solution lies in MLflow's ability to define custom `pyfunc`. By creating a custom `pyfunc`, we can:\n",
+    "\n",
     "- Define how the model loads its dependencies.\n",
+    "\n",
     "- Customize the inference process.\n",
+    "\n",
     "- Manipulate interface data to create specific inputs for the model.\n",
     "\n",
     "Let's dive into the code to see this in action.\n"
@@ -49,14 +55,16 @@
     "### Important Considerations Before Proceeding\n",
     "\n",
     "#### Hardware Recommendations\n",
-    "This guide demonstrates the usage of a particularly large and intricate Latent Linear Model (LLM). Given its complexity:\n",
+    "This guide demonstrates the usage of a particularly large and intricate Large Language Model (LLM). Given its complexity:\n",
     "\n",
     "- **GPU Requirement**: It's **strongly advised** to run this example on a system with a CUDA-capable GPU that possesses at least 64GB of VRAM.\n",
-    "- **CPU Caution**: While technically feasible, executing the model on a CPU can result in extremely prolonged inference times, potentially taking tens of minutes for a single prediction, even on top-tier CPUs. The recorded execution of this notebook is on a CPU and you can see the excessive runtime for yourself. With an appropriately powerful GPU, the total runtime of this notebook is ~8 minutes end to end.\n",
+    "- **CPU Caution**: While technically feasible, executing the model on a CPU can result in extremely prolonged inference times, potentially taking tens of minutes for a single prediction, even on top-tier CPUs. The final cell of this notebook is deliberately not executed due to the limitations with performance when running this model on a CPU-only system. However, with an appropriately powerful GPU, the total runtime of this notebook is ~8 minutes end to end.\n",
     "\n",
     "#### Execution Recommendations\n",
     "If you're considering running the code in this notebook:\n",
+    "\n",
     "- **Performance**: For a smoother experience and to truly harness the model's capabilities, use hardware aligned with the model's design.\n",
+    "\n",
     "- **Dependencies**: Ensure you've installed the recommended dependencies for optimal model performance. These are crucial for efficient model loading, initialization, attention computations, and inference processing:\n",
     "\n",
     "```bash\n",
@@ -86,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Downloading the Model and Tokenizer\n",
+    "#### Downloading the Model and Tokenizer\n",
     "\n",
     "First, we need to download our model and tokenizer. Here's how we do it:"
    ]
@@ -99,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50449e617b6d4e74849714cd47872bdb",
+       "model_id": "6cd68b848a614c84b948e92519e7370d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining the Custom PyFunc\n",
+    "#### Defining the Custom PyFunc\n",
     "\n",
     "Now, let's define our custom `pyfunc`. This will dictate how our model loads its dependencies and how it performs predictions. Notice how we've wrapped the intricacies of the model within this class."
    ]
@@ -273,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Set the experiment that we're going to be logging our custom model to\n",
+    "#### Set the experiment that we're going to be logging our custom model to\n",
     "\n",
     "If the the experiment doesn't already exist, MLflow will create a new experiment with this name and will alert you that it has created a new experiment."
    ]
@@ -287,13 +295,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/12 13:08:54 INFO mlflow.tracking.fluent: Experiment with name 'mpt-7b-instruct-evaluation' does not exist. Creating a new experiment.\n"
+      "2023/10/12 16:54:21 INFO mlflow.tracking.fluent: Experiment with name 'mpt-7b-instruct-evaluation' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='file:///Users/benjamin.wilson/repos/mlflow-fork/mlflow/docs/source/llms/custom-pyfunc-for-llms/notebooks/mlruns/776484745238898309', creation_time=1697130534261, experiment_id='776484745238898309', last_update_time=1697130534261, lifecycle_stage='active', name='mpt-7b-instruct-evaluation', tags={}>"
+       "<Experiment: artifact_location='file:///Users/benjamin.wilson/repos/mlflow-fork/mlflow/docs/source/llms/custom-pyfunc-for-llms/notebooks/mlruns/528860847726625085', creation_time=1697144061460, experiment_id='528860847726625085', last_update_time=1697144061460, lifecycle_stage='active', name='mpt-7b-instruct-evaluation', tags={}>"
       ]
      },
      "execution_count": 5,
@@ -318,7 +326,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0f7f6ac8cd44020a7b7306d19183cc9",
+       "model_id": "8893d82e2d474a7783e8fe4245874f9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +341,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/12 13:08:54 INFO mlflow.store.artifact.artifact_repo: The progress bar can be disabled by setting the environment variable MLFLOW_ENABLE_ARTIFACTS_PROGRESS_BAR to false\n",
+      "2023/10/12 16:54:21 INFO mlflow.store.artifact.artifact_repo: The progress bar can be disabled by setting the environment variable MLFLOW_ENABLE_ARTIFACTS_PROGRESS_BAR to false\n",
       "/Users/benjamin.wilson/miniconda3/envs/mlflow-dev-env/lib/python3.8/site-packages/_distutils_hack/__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
      ]
@@ -382,7 +390,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f2ec6c5113e43688922a973e2d5f34d",
+       "model_id": "0b97531220914ddbacf9628c5f252408",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "### Conclusion\n",
     "\n",
     "Through this tutorial, we've seen the power and flexibility of MLflow's custom `pyfunc`. By understanding the specific needs of our model and defining a custom `pyfunc` to cater to those needs, we can ensure a seamless deployment process and a user-friendly interface.\n"
    ]
