fix notebook linting
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/source/llms/custom-pyfunc-for-llms/notebooks/custom-pyfunc-advanced-llm.ipynb
+++ b/docs/source/llms/custom-pyfunc-for-llms/notebooks/custom-pyfunc-advanced-llm.ipynb
@@ -87,7 +87,7 @@
     "import mlflow\n",
     "import torch\n",
     "from huggingface_hub import snapshot_download\n",
-    "import accelerate\n"
+    "import accelerate"
    ]
   },
   {
@@ -121,9 +121,7 @@
    ],
    "source": [
     "# Download the MPT-7B instruct model and tokenizer to a local directory cache\n",
-    "snapshot_location = snapshot_download(\n",
-    "    repo_id=\"mosaicml/mpt-7b-instruct\", local_dir=\"mpt-7b\"\n",
-    ")"
+    "snapshot_location = snapshot_download(repo_id=\"mosaicml/mpt-7b-instruct\", local_dir=\"mpt-7b\")"
    ]
   },
   {
@@ -155,7 +153,7 @@
     "        config = transformers.AutoConfig.from_pretrained(\n",
     "            context.artifacts[\"snapshot\"], trust_remote_code=True\n",
     "        )\n",
-    "        # If you are running this in a system that has a sufficiently powerful GPU with available VRAM, \n",
+    "        # If you are running this in a system that has a sufficiently powerful GPU with available VRAM,\n",
     "        # uncomment the configuration setting below to leverage triton.\n",
     "        # Note that triton dramatically improves the inference speed performance\n",
     "\n",
@@ -264,7 +262,7 @@
     "parameters = ParamSchema(\n",
     "    [\n",
     "        ParamSpec(\"temperature\", DataType.float, np.float32(0.1), None),\n",
-    "        ParamSpec(\"max_tokens\", DataType.integer, np.int32(1000), None)\n",
+    "        ParamSpec(\"max_tokens\", DataType.integer, np.int32(1000), None),\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -272,9 +270,7 @@
     "\n",
     "\n",
     "# Define input example\n",
-    "input_example = pd.DataFrame(\n",
-    "    {\"prompt\": [\"What is machine learning?\"]}\n",
-    ")"
+    "input_example = pd.DataFrame({\"prompt\": [\"What is machine learning?\"]})"
    ]
   },
   {
@@ -351,7 +347,7 @@
     "# Get the current base version of torch that is installed, without specific version modifiers\n",
     "torch_version = torch.__version__.split(\"+\")[0]\n",
     "\n",
-    "# Start an MLflow run context and log the MPT-7B model wrapper along with the param-included signature to \n",
+    "# Start an MLflow run context and log the MPT-7B model wrapper along with the param-included signature to\n",
     "# allow for overriding parameters at inference time\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
@@ -359,9 +355,13 @@
     "        python_model=MPT(),\n",
     "        # NOTE: the artifacts dictionary mapping is critical! This dict is used by the load_context() method in our MPT() class.\n",
     "        artifacts={\"snapshot\": snapshot_location},\n",
-    "        pip_requirements=[f\"torch=={torch_version}\", \n",
-    "                          f\"transformers=={transformers.__version__}\", \n",
-    "                          f\"accelerate=={accelerate.__version__}\", \"einops\", \"sentencepiece\"],\n",
+    "        pip_requirements=[\n",
+    "            f\"torch=={torch_version}\",\n",
+    "            f\"transformers=={transformers.__version__}\",\n",
+    "            f\"accelerate=={accelerate.__version__}\",\n",
+    "            \"einops\",\n",
+    "            \"sentencepiece\",\n",
+    "        ],\n",
     "        input_example=input_example,\n",
     "        signature=signature,\n",
     "    )"
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The execution of this is commented out for the purposes of runtime on CPU. \n",
+    "# The execution of this is commented out for the purposes of runtime on CPU.\n",
     "# If you are running this on a system with a sufficiently powerful GPU, you may uncomment and interface with the model!\n",
     "\n",
     "# loaded_model.predict(pd.DataFrame(\n",
