--- a/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/introduction.ipynb
+++ b/docs/source/traditional-ml/creating-custom-pyfunc/notebooks/introduction.ipynb
@@ -24,20 +24,21 @@
    "source": [
     "import mlflow.pyfunc\n",
     "\n",
+    "\n",
     "class AddN(mlflow.pyfunc.PythonModel):\n",
     "    \"\"\"\n",
     "    A custom model that adds a specified value `n` to all columns of the input DataFrame.\n",
-    "    \n",
+    "\n",
     "    Attributes:\n",
     "    -----------\n",
     "    n : int\n",
     "        The value to add to input columns.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    def __init__(self, n):\n",
     "        \"\"\"\n",
     "        Constructor method. Initializes the model with the specified value `n`.\n",
-    "        \n",
+    "\n",
     "        Parameters:\n",
     "        -----------\n",
     "        n : int\n",
@@ -48,24 +49,24 @@
     "    def predict(self, context, model_input, params=None):\n",
     "        \"\"\"\n",
     "        Prediction method for the custom model.\n",
-    "        \n",
+    "\n",
     "        Parameters:\n",
     "        -----------\n",
     "        context : Any\n",
     "            Ignored in this example. It's a placeholder for additional data or utility methods.\n",
-    "            \n",
+    "\n",
     "        model_input : pd.DataFrame\n",
     "            The input DataFrame to which `n` should be added.\n",
-    "            \n",
+    "\n",
     "        params : dict, optional\n",
     "            Additional prediction parameters. Ignored in this example.\n",
-    "            \n",
+    "\n",
     "        Returns:\n",
     "        --------\n",
     "        pd.DataFrame\n",
     "            The input DataFrame with `n` added to all columns.\n",
     "        \"\"\"\n",
-    "        return model_input.apply(lambda column: column + self.n)\n"
+    "        return model_input.apply(lambda column: column + self.n)"
    ]
   },
   {
@@ -98,7 +99,7 @@
     "add5_model = AddN(n=5)\n",
     "\n",
     "# Save the model using MLflow\n",
-    "mlflow.pyfunc.save_model(path=model_path, python_model=add5_model)\n"
+    "mlflow.pyfunc.save_model(path=model_path, python_model=add5_model)"
    ]
   },
   {
@@ -116,7 +117,7 @@
    "outputs": [],
    "source": [
     "# Load the saved model\n",
-    "loaded_model = mlflow.pyfunc.load_model(model_path)\n"
+    "loaded_model = mlflow.pyfunc.load_model(model_path)"
    ]
   },
   {
@@ -139,7 +140,7 @@
     "model_input = pd.DataFrame([range(10)])\n",
     "\n",
     "# Use the loaded model to make predictions\n",
-    "model_output = loaded_model.predict(model_input)\n"
+    "model_output = loaded_model.predict(model_input)"
    ]
   },
   {
