--- a/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- RAG.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -35,13 +35,12 @@
    "outputs": [],
    "source": [
     "%pip install git+https://github.com/mlflow/mlflow.git@master\n",
-    "%pip install openai tiktoken textstat evaluate transformers torch langchain chromadb\n",
-    "dbutils.library.restartPython()"
+    "%pip install openai tiktoken textstat evaluate transformers torch langchain chromadb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -94,8 +93,7 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
-    "openai.api_key = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"redacted\""
    ]
   },
   {
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -201,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -285,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -307,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -350,6 +348,9 @@
    },
    "notebookName": "LLM Evaluation Examples -- RAG",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
