--- a/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
+++ b/examples/evaluation/LLM Evaluation Examples -- QA.ipynb
@@ -34,9 +34,11 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import openai\n",
     "import pandas as pd\n",
-    "import os\n",
+    "\n",
     "import mlflow"
    ]
   },
@@ -463,8 +465,7 @@
     }
    ],
    "source": [
-    "eval_table = results.tables[\"eval_results_table\"]\n",
-    "display(eval_table)"
+    "results.tables[\"eval_results_table\"]"
    ]
   },
   {
@@ -918,8 +919,7 @@
     }
    ],
    "source": [
-    "eval_table = results.tables[\"eval_results_table\"]\n",
-    "display(eval_table)"
+    "results.tables[\"eval_results_table\"]"
    ]
   },
   {
@@ -1358,7 +1358,7 @@
     }
    ],
    "source": [
-    "display(results.tables[\"eval_results_table\"])"
+    "results.tables[\"eval_results_table\"]"
    ]
   },
   {
@@ -1709,7 +1709,7 @@
     }
    ],
    "source": [
-    "display(results.tables[\"eval_results_table\"])"
+    "results.tables[\"eval_results_table\"]"
    ]
   },
   {
